fix: fix css bug in multi select option alignment (#263)

--- a/projects/components/src/multi-select/multi-select.component.scss
+++ b/projects/components/src/multi-select/multi-select.component.scss
@@ -63,7 +63,6 @@
     cursor: pointer;
     font-size: 14px;
     align-items: center;
-    justify-content: space-between;
 
     .checkbox {
       margin-right: 8px;
